tests/unit/default/syntax-error/131-add-fk-table-columns.e.t
---- IN ----
+FK%child(foo,bar)
---- OUT ----
---- ERR ----
syntax: expected `=>` after `+FK%child(foo,bar)` instead of EOL at position 18 - at line 1
---- EXIT ----
1
